Change header title from '投資儀表板' to '維股利'

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="flex justify-between items-center max-w-7xl mx-auto w-full">
             <div class="flex items-center gap-2">
                 <span class="material-icons text-gold text-3xl">bar_chart</span>
-                <h1 id="header-title" class="text-2xl font-bold tracking-wider text-gray-100 font-sans">投資儀表板</h1>
+                <h1 id="header-title" class="text-2xl font-bold tracking-wider text-gray-100 font-sans">維股利</h1>
             </div>
             <div class="flex gap-4 items-center">
                 <button onclick="window.openSettings()" class="text-gray-400 hover:text-gold transition flex items-center justify-center w-10 h-10 rounded-full hover:bg-[#222] focus:outline-none">
