--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
     </style>
 </head>
 <body>
-    <header class="bg-[#050505] p-4 sticky top-0 z-50 border-b border-[#333] pt-[env(safe-area-inset-top)]">
+    <!-- FIXED: Added max(env(safe-area-inset-top),36px) to force top spacing -->
+    <header class="bg-[#050505] p-4 sticky top-0 z-50 border-b border-[#333] pt-[max(env(safe-area-inset-top),36px)]">
         <div class="flex justify-between items-center max-w-7xl mx-auto w-full">
             <div class="flex items-center gap-2">
                 <span class="material-icons text-gold text-3xl">bar_chart</span>
@@ -109,7 +110,8 @@
                     <!-- Trigger Avatar -->
                     <button onclick="window.toggleUserMenu()" class="flex items-center justify-center relative w-9 h-9 rounded-full border border-gray-600 overflow-hidden focus:outline-none focus:border-gold hover:border-gold transition-colors bg-[#1A1A1A]">
                         <span id="header-avatar-icon" class="material-icons text-xl text-gray-500">account_circle</span>
-                        <img id="header-avatar-img" src="" class="w-full h-full object-cover hidden absolute inset-0" onerror="this.style.display='none';">
+                        <!-- FIXED: Added referrerpolicy="no-referrer" to fix Google Image 403 error -->
+                        <img id="header-avatar-img" src="" referrerpolicy="no-referrer" class="w-full h-full object-cover hidden absolute inset-0" onerror="this.style.display='none';">
                     </button>
 
                     <!-- Dropdown Menu -->
@@ -321,7 +323,6 @@
                     </li>
                 </ul>
             </section>
-            <!-- ... (Help content continues as before) ... -->
             <section>
                 <h4 class="text-gold font-bold text-xl mb-4 border-b border-[#333] pb-2">2. 試算表結構 (Sheet Structure)</h4>
                 <p class="text-gray-300 mb-3">請確保您的 Google Sheet 包含以下 5 個分頁 (名稱必須完全一致，大小寫敏感)：</p>
