--- a/StockApp_Report_Form.html
+++ b/StockApp_Report_Form.html
@@ -1,3 +1,9 @@
+<!-- 
+  [VER] v2.0 (2026-02-21)
+  [DESC] 
+    1. 保留獨立報告的玻璃擬物感，並修復邊距與底色
+    
+-->
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
@@ -7,32 +13,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
     <style type="text/css">
-        /* --- 1. 設計師調色盤 (保留您原本的絕美設計) --- */
+        /* --- 1. 設計師調色盤 --- */
         :root {
-            --bg-body: #0f1014;
-            --glass-bg: rgba(30, 34, 45, 0.6);
-            --glass-border: rgba(255, 255, 255, 0.08);
-            --color-primary: #FFD700; 
-            --color-text: #F0F0F0; 
-            --color-muted: #94A3B8; 
+            --bg-body: #000000; /* 改為純黑，與主程式無縫接軌 */
+            --glass-bg: rgba(30, 30, 30, 0.4); /* 調暗玻璃背景，貼近主程式的 #121212 */
+            --glass-border: #404040; /* 統一邊框顏色 */
+            --color-primary: #D4AF37; /* 統一為維股利金 */
+            --color-text: #F5F5F5; 
+            --color-muted: #9CA3AF; 
             --color-up: #4ADE80;   
-            --color-down: #F87171; 
-            --shadow-card: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
-            --radius: 16px;
-            --spacing: 10px;
+            --color-down: #EF4444; 
+            --shadow-card: 0 4px 15px rgba(0, 0, 0, 0.7);
+            --radius: 12px;
+            --spacing: 12px;
         }
 
         ::-webkit-scrollbar { width: 6px; height: 6px; }
-        ::-webkit-scrollbar-track { background: rgba(255, 255, 255, 0.02); border-radius: 3px; }
-        ::-webkit-scrollbar-thumb { background: rgba(255, 255, 255, 0.15); border-radius: 3px; transition: background 0.3s; }
-        ::-webkit-scrollbar-thumb:hover { background: rgba(255, 255, 255, 0.3); }
-        * { scrollbar-width: thin; scrollbar-color: rgba(255, 255, 255, 0.15) transparent; box-sizing: border-box; }
+        ::-webkit-scrollbar-track { background: transparent; }
+        ::-webkit-scrollbar-thumb { background-color: #333; border-radius: 99px; transition: background-color 0.2s; }
+        ::-webkit-scrollbar-thumb:hover { background-color: #666; }
+        * { scrollbar-width: thin; scrollbar-color: #333 transparent; box-sizing: border-box; }
 
         body {
             background-color: var(--bg-body);
-            background-image: radial-gradient(at 0% 0%, rgba(88, 28, 135, 0.15) 0px, transparent 50%), radial-gradient(at 100% 100%, rgba(15, 118, 110, 0.15) 0px, transparent 50%);
-            background-attachment: fixed; color: var(--color-text); font-family: 'Roboto', 'Noto Sans TC', sans-serif;
-            margin: 0; padding: 20px; font-size: 15px; line-height: 1.6; -webkit-font-smoothing: antialiased;
+            /* 移除原本的紫綠漸層背景 */
+            color: var(--color-text); font-family: 'Inter', 'Noto Sans TC', sans-serif;
+            margin: 0; 
+            padding: 0; /* 歸零 padding，交由外層主程式控制邊距 */
+            font-size: 14px; line-height: 1.6; -webkit-font-smoothing: antialiased;
         }
 
         /* 嚴格字體限制 */
@@ -40,76 +48,80 @@
         a { color: var(--color-primary); text-decoration: none; border-bottom: 1px dotted transparent; }
         a:hover { text-decoration: none; border-bottom-color: var(--color-primary); opacity: 0.8; }
 
-        .container { max-width: 900px; margin: 0 auto; display: flex; flex-direction: column; gap: var(--spacing); }
-        .card { background: var(--glass-bg); backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px); border-radius: var(--radius); padding: 10px; box-shadow: var(--shadow-card); border: 1px solid var(--glass-border); }
+        /* 移除 max-width 限制，讓 iframe 自動填滿寬度 */
+        .container { width: 100%; margin: 0 auto; display: flex; flex-direction: column; gap: var(--spacing); }
+        .card { background: var(--glass-bg); backdrop-filter: blur(8px); -webkit-backdrop-filter: blur(8px); border-radius: var(--radius); padding: 15px; box-shadow: var(--shadow-card); border: 1px solid var(--glass-border); }
 
-        .report-section { padding: 25px 10px; border-bottom: 1px solid rgba(255, 255, 255, 0.15); background: transparent; }
+        .report-section { padding: 25px 5px; border-bottom: 1px solid rgba(255, 255, 255, 0.1); background: transparent; }
         .report-section:last-child { border-bottom: none; }
-        .report-section h2 { margin-top: 0; font-size: 1.5rem; color: var(--color-primary); border-left: 4px solid var(--color-primary); padding-left: 10px; margin-bottom: 15px; }
+        .report-section h2 { margin-top: 0; font-size: 1.2rem; color: var(--color-primary); border-left: 3px solid var(--color-primary); padding-left: 10px; margin-bottom: 15px; }
         .report-section h2::before { display: none; }
 
-        .grid-3 { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px 5px; }
-        @media (max-width: 768px) { .grid-3 { grid-template-columns: 1fr; } body { padding: 15px; } .header-card { padding-top: 45px !important; } }
+        .grid-3 { display: grid; grid-template-columns: repeat(3, 1fr); gap: 12px; }
+        @media (max-width: 768px) { 
+            .grid-3 { grid-template-columns: 1fr; } 
+            body { padding: 0; } /* 確保手機版也不要有 padding */
+        }
 
         h1, h2, h3 { margin: 0 0 12px 0; font-weight: 700; color: #fff; letter-spacing: 0.5px; }
-        h1 { font-size: 2rem; color: #fff; }
-        .card h2 { font-size: 1.4rem; display: flex; align-items: center; margin-top: 10px; margin-bottom: 20px; }
-        .card h2::before { content: ''; display: inline-block; width: 4px; height: 20px; background: var(--color-primary); margin-right: 12px; border-radius: 2px; }
-        h3 { font-size: 1.1rem; color: var(--color-text); display: flex; align-items: center; gap: 10px; opacity: 0.95; }
+        h1 { font-size: 1.6rem; color: #fff; }
+        .card h2 { font-size: 1.2rem; display: flex; align-items: center; margin-top: 10px; margin-bottom: 15px; }
+        .card h2::before { content: ''; display: inline-block; width: 4px; height: 16px; background: var(--color-primary); margin-right: 12px; border-radius: 2px; }
+        h3 { font-size: 1rem; color: var(--color-text); display: flex; align-items: center; gap: 10px; opacity: 0.95; }
         .report-section h3 { justify-content: flex-start; margin-top: 20px; }
         .card h3 { justify-content: center; } .text-left h3 { justify-content: flex-start; } h3 i { color: var(--color-primary); }
 
-        .header-card { position: relative; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; background: linear-gradient(145deg, rgba(255,255,255,0.05) 0%, rgba(255,255,255,0.01) 100%); }
-        .header-card h1 { margin-bottom: 4px; line-height: 1.2; }
+        .header-card { position: relative; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; background: linear-gradient(145deg, rgba(255,255,255,0.03) 0%, rgba(255,255,255,0) 100%); padding-top: 35px; }
+        .header-card h1 { margin-bottom: 4px; line-height: 1.2; font-family: monospace; }
         .header-card p { margin: 0; }
-        .report-date-stamp { position: absolute; top: 10px; left: 10px; font-family: 'Roboto', monospace; font-size: 11pt; color: var(--color-muted); z-index: 10; opacity: 0.6; }
-        .btn-header-download { position: absolute; top: 10px; right: 10px; font-family: 'Roboto', monospace; font-size: 11pt; color: var(--color-muted); border: none; padding: 0; background: none; cursor: pointer; display: flex; align-items: center; gap: 6px; z-index: 10; opacity: 0.6; }
+        .report-date-stamp { position: absolute; top: 10px; left: 10px; font-family: monospace; font-size: 11pt; color: var(--color-muted); z-index: 10; opacity: 0.6; }
+        .btn-header-download { position: absolute; top: 10px; right: 10px; font-family: monospace; font-size: 11pt; color: var(--color-muted); border: none; padding: 0; background: none; cursor: pointer; display: flex; align-items: center; gap: 6px; z-index: 10; opacity: 0.6; }
         .btn-header-download:hover { color: var(--color-primary); opacity: 1; }
 
-        .rating-split-container { display: flex; justify-content: space-between; align-items: center; margin-top: 5px; padding-top: 5px; border-top: 1px solid rgba(255,255,255,0.05); }
+        .rating-split-container { display: flex; justify-content: space-between; align-items: center; margin-top: 5px; padding-top: 10px; border-top: 1px solid rgba(255,255,255,0.05); }
         .rating-col { flex: 1; display: flex; flex-direction: column; justify-content: center; align-items: center; padding: 0 5px; }
         .rating-col-left { border-right: 1px solid rgba(255,255,255,0.1); }
         .rating-price-main { font-size: 1.6rem; font-weight: 700; color: #fff; line-height: 1.1; font-family: monospace; }
-        .rating-price-date { font-size: 11pt; color: var(--color-muted); margin-top: 2px; font-family: 'Roboto', monospace; }
+        .rating-price-date { font-size: 10pt; color: var(--color-muted); margin-top: 4px; font-family: monospace; }
         .rating-buy-text { font-size: 1.6rem; font-weight: 800; color: var(--color-primary); line-height: 1.1; letter-spacing: 1px; }
-        .rating-signal-text { font-size: 11pt; color: var(--color-muted); margin-top: 2px; }
+        .rating-signal-text { font-size: 10pt; color: var(--color-muted); margin-top: 4px; }
 
-        .gauge-container { position: relative; width: 140px; height: 70px; margin: 5px auto; overflow: hidden; }
-        .gauge-bg { position: absolute; top: 0; left: 0; width: 140px; height: 140px; background: #2c3e50; border-radius: 50%; mask: radial-gradient(transparent 53%, black 55%); -webkit-mask: radial-gradient(transparent 53%, black 55%); }
-        .gauge-fill { position: absolute; top: 0; left: 0; width: 140px; height: 140px; background: conic-gradient(from 270deg, #785a00 0%, #d4af37 50%, #fdd835 75%, transparent 75%); border-radius: 50%; mask: radial-gradient(transparent 53%, black 55%); -webkit-mask: radial-gradient(transparent 53%, black 55%); filter: drop-shadow(0 0 5px rgba(212, 175, 55, 0.5)); transition: transform 1s ease-out; }
-        .gauge-value-center { position: absolute; bottom: 0; left: 0; width: 100%; text-align: center; font-size: 2.5rem; font-weight: 800; color: #fff; line-height: 1; z-index: 20; text-shadow: 0 0 20px rgba(0,0,0,0.5); font-family: monospace; }
+        .gauge-container { position: relative; width: 120px; height: 60px; margin: 10px auto; overflow: hidden; }
+        .gauge-bg { position: absolute; top: 0; left: 0; width: 120px; height: 120px; background: #222; border-radius: 50%; mask: radial-gradient(transparent 53%, black 55%); -webkit-mask: radial-gradient(transparent 53%, black 55%); }
+        .gauge-fill { position: absolute; top: 0; left: 0; width: 120px; height: 120px; background: conic-gradient(from 270deg, #b4941f 0%, #D4AF37 50%, #ffe082 75%, transparent 75%); border-radius: 50%; mask: radial-gradient(transparent 53%, black 55%); -webkit-mask: radial-gradient(transparent 53%, black 55%); filter: drop-shadow(0 0 5px rgba(212, 175, 55, 0.3)); transition: transform 1s ease-out; }
+        .gauge-value-center { position: absolute; bottom: 0; left: 0; width: 100%; text-align: center; font-size: 2rem; font-weight: 800; color: #fff; line-height: 1; z-index: 20; text-shadow: 0 0 10px rgba(0,0,0,0.8); font-family: monospace; }
 
-        .thermometer-bar { height: 12px; background: linear-gradient(90deg, #4ade80 0%, #facc15 50%, #f87171 100%); border-radius: 50px; position: relative; margin: 24px 0; box-shadow: inset 0 2px 4px rgba(0,0,0,0.3); }
-        .thermometer-marker { position: absolute; top: -6px; width: 6px; height: 24px; background: #fff; border-radius: 4px; box-shadow: 0 0 4px #fff; transform: translateX(-50%); transition: left 1s ease-out; }
+        .thermometer-bar { height: 10px; background: linear-gradient(90deg, #22C55E 0%, #EAB308 50%, #EF4444 100%); border-radius: 50px; position: relative; margin: 20px 0; }
+        .thermometer-marker { position: absolute; top: -5px; width: 4px; height: 20px; background: #fff; border-radius: 2px; box-shadow: 0 0 4px rgba(0,0,0,0.8); transform: translateX(-50%); transition: left 1s ease-out; }
 
-        .valuation-row { display: flex; justify-content: space-between; align-items: center; gap: 15px; }
-        .value-block { display: flex; flex-direction: column; align-items: center; min-width: 100px; }
-        .value-range { font-size: 11pt; color: var(--color-muted); margin-top: 2px; display: block; font-family: monospace; }
-        .big-number { font-size: 1.8rem; font-weight: 700; color: var(--color-primary); text-align: center; display: block; margin: 8px 0 2px 0; line-height: 1.2; font-family: monospace; }
+        .valuation-row { display: flex; justify-content: space-between; align-items: center; gap: 10px; }
+        .value-block { display: flex; flex-direction: column; align-items: center; min-width: 80px; }
+        .value-range { font-size: 10pt; color: var(--color-muted); margin-top: 2px; display: block; font-family: monospace; }
+        .big-number { font-size: 1.6rem; font-weight: 700; color: var(--color-primary); text-align: center; display: block; margin: 8px 0 2px 0; line-height: 1.2; font-family: monospace; }
         .val-cheap { color: var(--color-up) !important; font-family: monospace; }
         .val-expensive { color: var(--color-down) !important; font-family: monospace; }
 
         details { margin-top: 15px; background: transparent; border-radius: 0; overflow: visible; border: none; border-left: 2px solid rgba(255,255,255,0.1); padding-left: 15px; }
-        summary { padding: 10px 0; cursor: pointer; font-weight: 500; color: var(--color-primary); user-select: none; display: flex; justify-content: space-between; align-items: center; }
+        summary { padding: 10px 0; cursor: pointer; font-weight: 500; color: var(--color-primary); user-select: none; display: flex; justify-content: space-between; align-items: center; font-size: 13px; }
         summary:hover { background: none; text-decoration: underline; }
         summary::after { content: '+'; font-size: 1.2rem; font-weight: bold; }
         details[open] summary::after { content: '-'; }
 
         .table-container { width: 100%; overflow-x: auto; -webkit-overflow-scrolling: touch; padding-bottom: 5px; }
         table { width: 100%; border-collapse: collapse; white-space: nowrap; margin-top: 0; }
-        th, td { padding: 14px 10px; text-align: left; border-bottom: 1px solid rgba(255,255,255,0.08); font-size: 11pt; }
-        th { color: var(--color-muted); font-weight: 500; background: rgba(255,255,255,0.03); }
+        th, td { padding: 12px 10px; text-align: left; border-bottom: 1px solid rgba(255,255,255,0.08); font-size: 10.5pt; }
+        th { color: var(--color-muted); font-weight: 500; background: rgba(255,255,255,0.02); }
         td { font-feature-settings: "tnum"; font-family: monospace; }
         tr:last-child td { border-bottom: none; }
         tr:hover td { background: rgba(255,255,255,0.03); }
 
-        .tag { padding: 4px 10px; border-radius: 20px; font-weight: 600; display: inline-block; letter-spacing: 0.5px; }
-        .tag-buy { background: rgba(74, 222, 128, 0.15); color: #4ADE80; border: 1px solid rgba(74, 222, 128, 0.3); }
-        .tag-sell { background: rgba(248, 113, 113, 0.15); color: #F87171; border: 1px solid rgba(248, 113, 113, 0.3); }
-        .tag-hold { background: rgba(250, 204, 21, 0.15); color: #FACC15; border: 1px solid rgba(250, 204, 21, 0.3); }
+        .tag { padding: 3px 8px; border-radius: 4px; font-weight: 600; display: inline-block; letter-spacing: 0.5px; font-size: 10pt !important; }
+        .tag-buy { background: rgba(34, 197, 94, 0.15); color: #4ADE80; border: 1px solid rgba(34, 197, 94, 0.3); }
+        .tag-sell { background: rgba(239, 68, 68, 0.15); color: #F87171; border: 1px solid rgba(239, 68, 68, 0.3); }
+        .tag-hold { background: rgba(234, 179, 8, 0.15); color: #FACC15; border: 1px solid rgba(234, 179, 8, 0.3); }
 
-        .summary-highlight { font-size: 1.05rem; font-weight: 400; line-height: 1.7; color: #fff; padding: 10px; border-left: 3px solid var(--color-primary); background: rgba(255, 255, 255, 0.05); margin-bottom: 16px; border-radius: 0; }
-        .alert-box { background: rgba(183, 28, 28, 0.2); border: 1px solid rgba(183, 28, 28, 0.5); color: #FECACA; padding: 10px; border-radius: 4px; margin-bottom: 16px; display: flex; gap: 10px; align-items: flex-start; }
+        .summary-highlight { font-size: 1rem; font-weight: 400; line-height: 1.6; color: #fff; padding: 12px; border-left: 3px solid var(--color-primary); background: rgba(255, 255, 255, 0.03); margin-bottom: 16px; border-radius: 0; }
+        .alert-box { background: rgba(239, 68, 68, 0.1); border: 1px solid rgba(239, 68, 68, 0.3); color: #FCA5A5; padding: 10px; border-radius: 4px; margin-bottom: 16px; display: flex; gap: 10px; align-items: flex-start; }
 
         @media print {
             .no-print, .btn-header-download { display: none !important; }
