--- a/StockApp_Report_Form.html
+++ b/StockApp_Report_Form.html
@@ -1,6 +1,6 @@
 <!-- 
-  [VER] v3.3 [DATE] 2024-06-20
-  [DESC] 
+  [VER] v3.3.1 [DATE] 2024-06-20
+  [DESC] 修改圖示 
     1. 全面改用本益比（PE）模型取代股利折現模型（DDM）
     2. 在報告中新增了「體質總評」的維度，結合盈再率、ROE 趨勢與本益比位階等多項財務指標，給予股票一個綜合的強健/普通/警示評級。
     
@@ -50,9 +50,9 @@
 
         .report-section { padding: 25px 5px; border-bottom: 1px solid rgba(255, 255, 255, 0.1); background: transparent; }
         .report-section:last-child { border-bottom: none; }
-        /* 美化 H2 標題：改為 ICON 佈局 */
-        .report-section h2 { margin-top: 0; font-size: 1.3rem; color: #fff; display: flex; align-items: center; gap: 10px; margin-bottom: 20px; border-left: none; padding-left: 0; letter-spacing: 1px; }
-        .report-section h2::before { display: none; }
+        /* 美化 H2 標題與質感 ICON 排版 */
+        .report-section h2, .card h2 { margin-top: 0; font-size: 1.3rem; color: #fff; display: flex; align-items: center; gap: 10px; margin-bottom: 20px; border-left: none; padding-left: 0; letter-spacing: 1px; }
+        .report-section h2::before, .card h2::before { display: none; } /* 徹底移除發光色塊 */
         /* H3 區塊間隔線 */
         .section-divider { border: 0; height: 1px; background: rgba(255,255,255,0.08); margin: 25px 0; }
 
@@ -322,7 +322,7 @@
         </div>
     </div>
 
-    <div class="card" style="border-left: 5px solid var(--color-primary);">
+    <div class="card">
         <h2><span class="material-icons" style="color:#D4AF37; font-size: 1.4rem;">insights</span> 4. 分析師關鍵點評</h2>
         <ul>
             <li id="var-conc-price-level"><strong>價格位階：</strong> 運算中...</li>
