--- a/StockApp_Report_Form.html
+++ b/StockApp_Report_Form.html
@@ -13,6 +13,7 @@
     <title>維股利投資分析報告</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <style type="text/css">
         :root {
             --bg-body: #000000; 
